# tt-torrent-seedbox

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  config.example copy.yaml  config.example.yaml  pinned.txt  pyproject.toml
deploy/: porla-setup.md
deploy/systemd/: porla.service  ttseed-dashboard.service  ttseed-feed-ingest.service  ttseed-feed-ingest.timer  ttseed-ingest.service  ttseed-ingest.timer  ttseed-reconcile.service  ttseed-reconcile.timer  ttseed-stats.service  ttseed-stats.timer
src/: cli.py  config.py  db.py  discover.py  feed.py  http_client.py  ingest.py  login.py  porla_client.py  util.py
src/ttseed/: cli.py  config.py  dashboard.py  db.py  http_client.py  ingest.py  logging_setup.py  porla_client.py  reconcile.py  scoring.py  stats.py  util.py
static/: styles.css
templates/: actions.html  base.html  overview.html  trackers.html  vulnerable.html
tests/: test_db.py  test_scoring.py  test_sitemap.py  test_util.py
