[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttseed"
version = "0.1.0"
description = "Policy engine for Porla-managed archival seeding"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ttseed"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "typer==0.21.1",
  "requests==2.32.5",
  "feedparser==6.0.12",
  "pyyaml==6.0.3",
  "sqlalchemy==2.0.46",
  "beautifulsoup4==4.14.3"
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "ruff==0.14.14",
]

[project.scripts]
ttseed-ingest = "cli:ingest_cmd"
ttseed-stats = "cli:stats_cmd"
ttseed-reconcile = "cli:reconcile_cmd"
ttseed-dashboard = "cli:dashboard_cmd"
ttseed-initdb = "cli:initdb_cmd"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "cli",
  "config",
  "dashboard",
  "db",
  "http_client",
  "ingest",
  "porla_client",
  "reconcile",
  "scoring",
  "stats",
  "util",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
